# loggerlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GAS-REPORT.md  LICENSE  README.md  README.zh-CN.md  REQUIREMENTS.md  SECURITY.md  TEST_PLAN.md
.claude/skills/loggerlog/: SKILL.md
.claude/skills/loggerlog/agents/: openai.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/cli/commands/: config.rs  index.rs  mod.rs  project.rs  search.rs
src-tauri/src/core/: config.rs  encoding.rs  engine.rs  entry.rs  index.rs
src-tauri/src/core/formats/: log4j.rs
src-tauri/src/gui/: events.rs  mod.rs  state.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  index.rs  mod.rs  project.rs  search.rs  tail.rs
src/core/: config.rs  discovery.rs  encoding.rs  engine.rs  entry.rs  index.rs  mod.rs  parser.rs  scanner.rs  watcher.rs
src/core/formats/: json_log.rs  log4j.rs  mod.rs  plain.rs
tests/: integration_test.rs
tests/fixtures/: README.md
tests/fixtures/encoding/: expected.json
tests/fixtures/json/: 01_standard.jsonl  02_alternative_fields.jsonl  03_extra_fields.jsonl  04_timestamp_variants.jsonl  05_edge_cases.jsonl  06_large_sample.jsonl  07_mixed_case_fields.jsonl  expected.json
tests/fixtures/log4j/: expected.json
tests/fixtures/logback/: expected.json
tests/fixtures/mixed/: expected.json
tests/fixtures/plain/: expected.json
tests/fixtures/real_world/: expected.json  nodejs_app.jsonl
tests/fixtures/rotation/: app.log.1
tests/fixtures/search/: expected.json
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: LogDetail.tsx  ResultsTable.tsx  SearchBar.tsx  SourceTree.tsx  StatusBar.tsx
ui/src/lib/: api.ts
