[package]
name = "loggerlog"
version = "0.1.1"
edition = "2021"
description = "Lightweight CLI log search tool powered by SQLite FTS5"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mzaxd/loggerlog"
keywords = ["log", "search", "fts5", "cli", "log-analysis"]
categories = ["command-line-utilities", "database"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "string"] }
comfy-table = "7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Log parsing
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"

# Compression support
flate2 = "1"

# File system watching
notify = "7"
notify-debouncer-mini = "0.5"

# File system traversal
walkdir = "2"

# Parallel processing
rayon = "1.10"

# Error handling
anyhow = "1"

# Directory paths
dirs = "6"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
