[package]
name = "loggerlog"
version = "0.1.0"
edition = "2021"
description = "Lightweight log search tool with GUI and CLI"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:comfy-table", "dep:colored"]
gui = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-plugin-shell"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "string"], optional = true }
comfy-table = { version = "7", optional = true }
colored = { version = "2", optional = true }

# GUI (Tauri v2)
tauri = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Log parsing
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"

# File system watching
notify = "7"
notify-debouncer-mini = "0.5"

# File system traversal
ignore = "0.4"
walkdir = "2"

# Memory-mapped files
memmap2 = "0.9"

# Parallel processing
rayon = "1.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Directory paths
dirs = "6"

[dev-dependencies]
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
opt-level = 3
lto = true
